cli/monar/tests/snapshots/cli_tests__cli_output.snap
---
source: cli/monar/tests/cli_tests.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Welcome to monar CLI!
