cli/monar/tests/snapshots/cli_tests__cli_output_with_name.snap
---
source: cli/monar/tests/cli_tests.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Hello, test!
