cli/monar/tests/snapshots/cli_tests__invalid_argument.snap
---
source: cli/monar/tests/cli_tests.rs
expression: "String::from_utf8(output.stderr).unwrap()"
---
error: unexpected argument '--invalid-arg' found

Usage: monar [OPTIONS]

For more information, try '--help'.
