cli/monar/tests/snapshots/cli_tests__regression_bug_123.snap
---
source: cli/monar/tests/cli_tests.rs
expression: "String::from_utf8(output.stderr).unwrap()"
---
error: unexpected argument '--some-specific-input-that-caused-a-bug' found

Usage: monar [OPTIONS]

For more information, try '--help'.
